# GOP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README-requirements.md  README.md  TESTING.md  cli.py  main.py  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py  ВКР.md  Мага.md  научная_работа_ортофотоплан_гиперспектральная_съемка.md
.github/workflows/: coverage.yml  docs.yml  quality.yml  release.yml  test.yml
.pre-commit-hooks/: docs-check.yaml
config/: config.yaml
data/: README.md
docs/: DOCUMENTATION_REPORT.md  Makefile  README.md  check_docs.sh  generate_docs.py  generate_docs.sh  ВКР.md
docs/api/: Makefile  conf.py  examples.rst  introduction.rst  make.bat  quickstart.rst
docs/api/_build/html/: .buildinfo  contributing.html  examples.html  genindex.html  index.html  introduction.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/api/_build/html/.doctrees/: contributing.doctree  examples.doctree  index.doctree  introduction.doctree  quickstart.doctree
docs/api/_build/html/.doctrees/api/: modules.doctree  src.core.doctree  src.doctree  src.indices.doctree  src.processing.doctree  src.segmentation.doctree  src.utils.doctree
docs/api/_build/html/_sources/: contributing.rst.txt  index.rst.txt
docs/api/_build/html/_sources/api/: src.processing.rst.txt  src.rst.txt  src.segmentation.rst.txt  src.utils.rst.txt
docs/api/_build/html/api/: modules.html  src.core.html  src.html  src.indices.html  src.processing.html  src.segmentation.html  src.utils.html
docs/api/api/: src.core.rst  src.indices.rst
examples/: README.md  basic_processing.py  hyperspectral_real_data.py  integration_examples.py  interactive_analysis.ipynb  orthophoto_analysis.py  scientific_analysis.py  use_case_scenarios.py
src/: __init__.py
src/core/: __init__.py  config.py  pipeline.py
src/indices/: __init__.py  calculator.py  definitions.py
src/processing/: __init__.py  hyperspectral.py  orthophoto.py
src/processing/hyperspectral/: __init__.py  cache.py  corrections.py  denoising.py  validators.py
src/segmentation/: __init__.py  segmenter.py
src/utils/: __init__.py  file_utils.py  image_utils.py  logger.py  visualization.py
tests/: README.md  __init__.py  run_tests.py  test_cli.py  test_config.py  test_file_utils.py  test_hyperspectral.py  test_image_utils.py  test_indices.py  test_integration.py  test_logger.py  test_orthophoto.py  test_pipeline.py  test_scientific_pipeline.py  test_segmentation.py  test_visualization.py
